feat(earldkaiju): fix layout, responsive 3-col booking form, 2×2 latest videos, stationary-bg testimonial slider; add local Font Awesome, per-page SEO via Helmet

--- a/client/index.html
+++ b/client/index.html
@@ -54,6 +54,7 @@
 
     
     <link rel="stylesheet" href="/assets/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="/assets/fontawesome/css/v5-font-face.min.css">
 
     <!-- Optional: basic OG image preload (kept lightweight) -->
     <link rel="preload" as="image" href="/assets/og/og-image.jpg" imagesrcset="/assets/og/og-image.jpg 1200w" />
