Update the entire Portfolio to accuratley reflect my experiences

--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,10 @@
     />
 
     <!-- Primary SEO -->
-    <title>Earl Hickson Jr. — Senior Front-End / UI Engineer (React, Angular, TypeScript)</title>
+    <title>Earl Hickson Jr. — Front-End Developer (React, Angular, TypeScript)</title>
     <meta
       name="description"
-      content="Senior Front-End / UI Engineer focused on React, Angular, and TypeScript. I build responsive, accessible, performance-minded apps—delivering Lighthouse +18% and faster TTI."
+      content="Front-End Developer focused on React, Angular, and TypeScript. I build responsive, accessible, performance-minded apps—delivering Lighthouse +18% and faster TTI."
     />
     <link rel="canonical" href="https://www.ehicksonjr.com/" />
     <meta name="robots" content="index,follow" />
@@ -19,7 +19,7 @@
     <meta name="color-scheme" content="dark light" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Earl Hickson Jr. — Senior Front-End / UI Engineer" />
+    <meta property="og:title" content="Earl Hickson Jr. — Front-End Developer" />
     <meta
       property="og:description"
       content="React, Angular, TypeScript. Accessible, fast UIs with measurable wins."
@@ -27,11 +27,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.ehicksonjr.com/" />
     <meta property="og:image" content="/assets/og/og-image.jpg" />
-    <meta property="og:image:alt" content="Earl Hickson Jr. — Senior Front-End / UI Engineer" />
+    <meta property="og:image:alt" content="Earl Hickson Jr. — Front-End Developer" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Earl Hickson Jr. — Senior Front-End / UI Engineer" />
+    <meta name="twitter:title" content="Earl Hickson Jr. — Front-End Developer" />
     <meta
       name="twitter:description"
       content="React, Angular, TypeScript. Accessible, fast UIs with measurable wins."
@@ -72,9 +72,6 @@
 
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- Replit dev banner (safe to remove in production) -->
-    <script src="https://replit.com/public/js/replit-dev-banner.js"></script>
-
     <!-- Hash-route redirect preservation (for static hosting) -->
     <script>
       try {
@@ -92,7 +89,7 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Earl Hickson Jr.",
-        "jobTitle": "Senior Front-End / UI Engineer",
+        "jobTitle": "Front-End Developer",
         "url": "https://www.ehicksonjr.com/",
         "sameAs": [
           "https://www.linkedin.com/in/ehicksonjr",
